--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,4 @@
+<!Doctype html>
 <html>
 <head></head>
 <title></title>
@@ -5,4 +6,5 @@
 <h2>Welcome</h2>
 <p>welcome to adhoc we are hackathon students</p>
 </body>
+
 </html>
