--- a/index1.html
+++ b/index1.html
@@ -1,10 +1,12 @@
 <!Doctype html>
 <html>
-<head></head>
+<head>
 <title></title>
+</head>
 <body>
 <h2>Welcome</h2>
 <p>welcome to adhoc we are hackathon students</p>
 </body>
 
 </html>
+
