--- a/index1.html
+++ b/index1.html
@@ -1,12 +1,14 @@
 <!Doctype html>
 <html>
 <head>
-<title></title>
+<title>
+  Welcome to Web Page
+</title>
 </head>
 <body>
 <h2>Welcome</h2>
 <p>welcome to adhoc we are hackathon students</p>
 </body>
-
 </html>
+
 
